# UnMix-NeRF

./: .gitignore  README.md  index.html  pyproject.toml  readme.md  requirements.txt
data/: adapt_transforms.py  spec2rgb.py
docs/site/: index.html  site.webmanifest
scripts/: ajar.sh  anacampseros.sh  caladium.sh  cbox_dragon.sh  cbox_sphere.sh  hotdog.sh  pinecone.sh
site/assets/css/: styles.css
unmixnerf/: unmix_config.py  unmix_field.py  unmix_model.py  unmix_pipeline.py
unmixnerf/data/: unmix_datamanager.py  unmix_dataparser.py
unmixnerf/data/utils/: hs_dataloader.py  vca.py
