[project]
name = "unmixnerf"
description = "Unmix-Nerf: Spectral Unmixing Meets Neural Radiance Fields"
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["unmixnerf*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
unmixnerf = 'unmixnerf.unmix_config:unmix_method'